--- a/website/index.html
+++ b/website/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello World</title>
+    <title>Homework 3</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>My name is Jordan Molina</h2>
+    <h1>JavaScript Homework</h1>
+    <h2>The program output</h2>
 </body>
 </html>
