--- a/website/index.html
+++ b/website/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Homework 3</title>
 </head>
+
 <body>
     <h1>JavaScript Homework</h1>
+
     <h2>The program output</h2>
+    <hr>
+    <p id = "output"></p>
+    <p id="sum"></p>
+    <p id="binary"></p>
+    <script src="app.js"></script>
+    <hr>
 </body>
+<footer>
+
+</footer>
+
 </html>
